--- a/force-app/main/default/classes/TherapeuticAreaPatientService.cls
+++ b/force-app/main/default/classes/TherapeuticAreaPatientService.cls
@@ -1,4 +1,6 @@
 public without sharing class TherapeuticAreaPatientService {
+    
+    /// TODO replace PSE on PE !!!!
 
     public Therapeutic_Area_Patient__c getRelatedToStudyTherapeuticAreaPatient(Id participantId, Id tAId) {
         return new Therapeutic_Area_Patient__c(
