--- a/force-app/main/default/classes/ParticipantItem.cls
+++ b/force-app/main/default/classes/ParticipantItem.cls
@@ -7,19 +7,20 @@ public class ParticipantItem {
     @AuraEnabled public Participant_Enrollment__c pe;
     @AuraEnabled public Map<String, PEStatusState> peStatusStateMap = PEStatusState.STATUSES_MAP;
     @AuraEnabled public List<String> peStatusesPathList = PEStatusState.STATUS_STEPS_LIST;
-    @AuraEnabled public List<LabelValueItem> psePathSteps = PSEService.getInstance().getPSEPathSteps();
-    @AuraEnabled public Boolean showPSESteps;
+    @AuraEnabled public List<LabelValueItem> participationFlowSteps = PEStatusState.getParticipationFlowSteps();
+    @AuraEnabled public Boolean showParticipationSteps;
     
     public ParticipantItem(Participant_Enrollment__c pe){
         Boolean isParticipant = CommunityService.getUserContact().userCommunityMode__c == CommunityService.USER_MODE_PARTICIPANT;
         pe.Referral_Source__c = TranslateHelper.getPickListLabel(Participant_Enrollment__c.Referral_Source__c, pe.Referral_Source__c);
         this.pe = pe;
-        this.showPSESteps = pe.Study_Site__r.Clinical_Trial_Profile__r.Participating_in_Patient_Portal__c == 'Yes' || !isParticipant ;
+        this.showParticipationSteps = pe.Study_Site__r.Clinical_Trial_Profile__r.Participating_in_Patient_Portal__c == 'Yes' || !isParticipant ;
     }
 
     public ParticipantItem(ParticipantService.ParticipantState participantState) {
         Boolean isParticipant = CommunityService.getUserContact().userCommunityMode__c == CommunityService.USER_MODE_PARTICIPANT;
         this.pe = participantState.pe;
-        this.showPSESteps = participantState.isPremium || !isParticipant;
+        Boolean isPEInParticipationFlow = PEStatusState.PE_STATUS_GROUP_PARTICIPATION_FLOW.contains(participantState.pe.Participant_Status__c);
+        this.showParticipationSteps = (isPEInParticipationFlow && participantState.isPremium) || !isParticipant;
     }
 }
