--- a/force-app/main/default/classes/VisitResultSharingService.cls
+++ b/force-app/main/default/classes/VisitResultSharingService.cls
@@ -93,7 +93,7 @@ public without sharing class VisitResultSharingService {
         if (visitResultTypeSharingByType == null) {
             visitResultTypeSharingByType = getResultTypeSharingsByType(getCTP(state.ctp.Id).Visit_Result_Type_Sharings__r);
         }
-        String mailingCountryCode = state.pse.Participant__r.Mailing_Country_Code__c;
+        String mailingCountryCode = state.pe.Participant__r.Mailing_Country_Code__c;
         for (Visit_Result__c result : visitResults) {
             if (visitResultTypeSharingByType.containsKey(result.Result_Type__c)) {
                 Visit_Result_Type_Sharing__c resultTypeSharing = visitResultTypeSharingByType.get(result.Result_Type__c);
