--- a/force-app/main/tests/classes/TestData.cls
+++ b/force-app/main/tests/classes/TestData.cls
@@ -15,7 +15,8 @@ public class TestData {
     public Participant_Study_Enrollment__c pse;
     public Participant_Enrollment__c pe;
     public HCP_Enrollment__c hcpEnrollment;
-    
+    private static Contact hcpContact;
+    private static Terms_And_Conditions__c studyTC;
     public TestData(){
         participant = [
                 SELECT Id, Name
@@ -85,7 +86,7 @@ public class TestData {
         );
         tcList.add(portalTC);
     
-        Terms_And_Conditions__c studyTC = new Terms_And_Conditions__c();
+        studyTC = new Terms_And_Conditions__c();
         tcList.add(studyTC);
         insert tcList;
     
@@ -126,8 +127,8 @@ public class TestData {
                 AccountId = piAccount.Id
         );
         contacts.add(piContact);
-        
-        Contact hcpContact = new Contact(
+
+        hcpContact = new Contact(
                 FirstName = 'HCP',
                 LastName = 'HCP',
                 Email = 'hcp@emil.com',
@@ -232,8 +233,12 @@ public class TestData {
         );
         insert contactTherapeuticArea;
     
+
+    }
+
+    public static void loadTcAcceptance() {
         User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
-    
+
         Terms_And_Conditions_Acceptance__c tc_acceptance = new Terms_And_Conditions_Acceptance__c(
                 User__c = hcpUser.Id,
                 Terms_And_Conditions__c = studyTC.Id
