--- a/force-app/main/tests/classes/Test_VisitService.cls
+++ b/force-app/main/tests/classes/Test_VisitService.cls
@@ -1,7 +1,7 @@
 /**
  * Created by Igor Malyuta on 19.04.2019.
  */
-@IsTest
+@IsTest(IsParallel=true)
 private class Test_VisitService {
 
     @IsTest
