--- a/force-app/main/triggers-implementation/classes/StudySiteTriggerHandler.cls
+++ b/force-app/main/triggers-implementation/classes/StudySiteTriggerHandler.cls
@@ -60,7 +60,7 @@ public without sharing class StudySiteTriggerHandler {
                 }
             }
         }
-        if(contactIdsForCreateUsers.size() > 0) CommunityService.createPortalUsers(contactIdsForCreateUsers);
+        if(contactIdsForCreateUsers.size() > 0) ((CommunityService) ClassFactory.newInstance(CommunityService.class)).createPortalUsers(contactIdsForCreateUsers);
         if(contactsForSendNotificationMap.size() > 0) SendEmailTemplate.sendEmailNotification(CommunityService.COMMUNITY_ET_PI, contactsForSendNotificationMap);
     }
     
