--- a/force-app/main/tests/classes/Test_BasePPCommunity.cls
+++ b/force-app/main/tests/classes/Test_BasePPCommunity.cls
@@ -6,11 +6,18 @@
  *
  */
 
-@IsTest
+@IsTest(IsParallel=true)
 private class Test_BasePPCommunity {
     
     @TestSetup
     public static void init(){
+        ClassFactory.putStubTypeByClassName(CommunityService.class, StubFactory.newInstance(CommunityService.class)
+                .when('createPortalUsers')
+                .then(null)
+                .when('createParticipantUsers')
+                .then(null)
+                .getInstance()
+        );
         TriggerHandlerExecutor.bypassHandler(ParticipantEnrollmentTriggerHandler.CreateUsersOrSendNotificationsHandler.class);
         TestData.loadTestData();
     }
