--- a/force-app/main/tests/classes/Test_SurveyResponseTriggerHandler.cls
+++ b/force-app/main/tests/classes/Test_SurveyResponseTriggerHandler.cls
@@ -10,6 +10,13 @@ private class Test_SurveyResponseTriggerHandler {
         List<Survey> survey = [SELECT Id FROM Survey WHERE ActiveVersionId != NULL LIMIT 1];
         if(survey.isEmpty()) return;
 
+        ClassFactory.putStubTypeByClassName(CommunityService.class, StubFactory.newInstance(CommunityService.class)
+                .when('createPortalUsers')
+                .then(null)
+                .when('createParticipantUsers')
+                .then(null)
+                .getInstance()
+        );
         TestData.loadTestData();
         TestData testData = new TestData();
 
@@ -51,6 +58,13 @@ private class Test_SurveyResponseTriggerHandler {
         List<Survey> survey = [SELECT Id FROM Survey WHERE ActiveVersionId != NULL LIMIT 1];
         if(survey.isEmpty()) return;
 
+        ClassFactory.putStubTypeByClassName(CommunityService.class, StubFactory.newInstance(CommunityService.class)
+                .when('createPortalUsers')
+                .then(null)
+                .when('createParticipantUsers')
+                .then(null)
+                .getInstance()
+        );
         TestData.loadTestData();
         TestData testData = new TestData();
 
