PEH-872 Merge PE and PSE VisitResultService.

--- a/force-app/main/tests/classes/Test_PSEStatusHistoryRemote.cls
+++ b/force-app/main/tests/classes/Test_PSEStatusHistoryRemote.cls
@@ -12,7 +12,7 @@ private class Test_PSEStatusHistoryRemote {
         TestData testDataInstance = new TestData();
         testDataInstance.createPSE();
         System.runAs(testDataInstance.participantUser){
-            PSEStatusHistoryRemote.getPSEStatusHistory(testDataInstance.pse.Id);
+            PSEStatusHistoryRemote.getParticipationStatusHistory(testDataInstance.pe.Id);
         }
         Test.stopTest();
     }
