--- a/force-app/main/default/classes/AddPatientByPIRemote.cls
+++ b/force-app/main/default/classes/AddPatientByPIRemote.cls
@@ -53,11 +53,13 @@ public class AddPatientByPIRemote {
         try{
             Participant__c participant = (Participant__c)JSON.deserialize(participantJSON, Participant__c.class);
             Participant_Enrollment__c pe = (Participant_Enrollment__c)JSON.deserialize(peJSON, Participant_Enrollment__c.class);
-            String peStatus = pe.Participant_Status__c;
+
+            PEStatusState currentState = PEStatusState.STATUSES_MAP.get(pe.Participant_Status__c);
             pe.Participant_Status__c = PEStatusState.PE_STATUS_REFERRAL_SENT_TO_PI;
             pe.Referral_Source__c = 'PI';
+
             ParticipantService.createParticipantAndUpdatePE(participant, pe);
-            PEStatusState currentState = PEStatusState.STATUSES_MAP.get(peStatus);
+
             List<Participant_Enrollment_Status_History__c> statusHistories = new List<Participant_Enrollment_Status_History__c>();
             for(PEStatusState.StatusStep step : PEStatusState.STATUS_STEPS_TABLE){
                 if(step.name == currentState.name) break;
@@ -69,9 +71,9 @@ public class AddPatientByPIRemote {
                         NewStatus__c = step.states.get(PEStatusState.STATUS_STATE_SUCCESS)
                 ));
             }
-            insert statusHistories;
-            pe.Participant_Status__c = peStatus;
+
             update pe;
+            insert statusHistories;
         }catch (Exception e){
             AuraHelper.throwException(e);
         }
@@ -88,5 +90,4 @@ public class AddPatientByPIRemote {
             AuraHelper.throwException(e);
         }
     }
-
 }
