--- a/force-app/main/default/classes/VisitResultsService.cls
+++ b/force-app/main/default/classes/VisitResultsService.cls
@@ -78,7 +78,7 @@ public inherited sharing class VisitResultsService {
         return !ParticipantService.ParticipantStates.ALUMNI.equals(pState.value)
                 || pState.isDelegate
                 || !VisitResultSharingService.isVisitResultAvailable()
-                || !pState.pse.Participant_Contact__r.Visit_Results_Opt_In__c;
+                || !pState.pe.Participant_Contact__r.Visit_Results_Opt_In__c;
     }
 
     private List<VisitResultWrapper> getVisitResultWrappers(List<Visit_Result__c> visitResults, List<Visit_Result_TypeM__mdt> visitResultTypes) {
